# smartsearch

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-npm.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/05-14-rebase-develop-onto-upstream/: task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-13-smart-search-evidence-workflow/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-05/05-14-rebase-develop-onto-upstream/: prd.md  task.json
.trellis/workspace/geshenhong/: index.md  journal-1.md
npm/scripts/: test.js
scripts/: rebuild-mise-venv.ps1
skills/smart-search-cli/: SKILL.md
skills/smart-search-cli/references/: cli-contract.md
src/smart_search/: cli.py  config.py  service.py  skill_installer.py
src/smart_search/assets/skills/smart-search-cli/: SKILL.md
src/smart_search/providers/: __init__.py  openai_compatible.py
tests/: conftest.py  test_cli.py  test_config_dir_override.py  test_openai_compatible_provider.py  test_providers_new.py  test_regression.py  test_release_workflow.py  test_service.py  test_smoke.py  test_sources.py  test_xai_responses_provider.py
(+1 files in other folders)
